<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/TableLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="45dp"
        android:background="@drawable/shape" />

    <TableLayout android:layout_gravity="fill_horizontal" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_marginLeft="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/empty"
                android:tag="empty" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/empty" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/empty" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_marginLeft="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/empty" />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/empty" />

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/empty" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_marginLeft="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
            android:paddingBottom="20dp">

            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/empty" />

            <ImageView
                android:id="@+id/imageView8"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/empty" />

            <ImageView
                android:id="@+id/imageView9"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/empty" />
        </TableRow>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                
                android:id="@+id/button1"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="100dp"
                android:text="@string/btn_score" />

            <Button
                android:id="@+id/button2"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/btn_reset" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/button3"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="100dp"
                android:text="@string/btn_credits" />

            <Button
                android:id="@+id/button4"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/btn_quit" />
        </LinearLayout>
    </TableLayout>

</TableLayout>